--- a/settings.gradle
+++ b/settings.gradle
@@ -1,18 +1,18 @@
 pluginManagement {
     repositories {
-        gradlePluginPortal()
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
 }
+
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
     repositories {
         google()
         mavenCentral()
     }
 }
+
 rootProject.name = "AndOrb"
-include ':app'
-include ':opencv'
-project(':opencv').projectDir = new File(opencvsdk + '/sdk')
+include(":app")
