--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -3,38 +3,47 @@ name: Build and Upload APK
 on:
   push:
     branches:
-      - master
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: 17
 
-      - name: Grant permission to execute gradlew
-        run: chmod +x ./gradlew
-
-      - name: Download and Extract OpenCV Android SDK
+      - name: Download OpenCV SDK
         run: |
-          wget -O opencv.zip https://github.com/opencv/opencv/releases/download/4.5.5/opencv-4.5.5-android-sdk.zip
+          wget -O opencv.zip https://github.com/opencv/opencv/releases/download/4.9.0/opencv-4.9.0-android-sdk.zip
           unzip opencv.zip
-          mv OpenCV-android-sdk app/OpenCV-android-sdk
-          rm opencv.zip
-          echo "OpenCV SDK downloaded and placed in app/OpenCV-android-sdk"
+          mv OpenCV-android-sdk ./app/OpenCV-android-sdk
+
+      - name: Register OpenCV in settings.gradle
+        run: |
+          echo "include ':opencv'" >> settings.gradle
+          echo "project(':opencv').projectDir = new File('app/OpenCV-android-sdk/sdk/java')" >> settings.gradle
+
+      - name: Patch app/build.gradle to use OpenCV
+        run: |
+          echo "" >> app/build.gradle
+          echo "dependencies { implementation project(':opencv') }" >> app/build.gradle
+          echo "android { sourceSets { main { jniLibs.srcDirs = ['OpenCV-android-sdk/sdk/native/libs'] } } }" >> app/build.gradle
 
       - name: Build Debug APK
-        run: ./gradlew assembleDebug
+        run: ./gradlew assembleDebug --stacktrace
 
       - name: Upload APK
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: app-debug
+          name: app-debug.apk
           path: app/build/outputs/apk/debug/app-debug.apk
