--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,18 +10,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout repository
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Step 2: Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 17
 
+      # Step 3: Grant permission to execute gradlew
       - name: Grant permission to execute gradlew
         run: chmod +x ./gradlew
 
+      # Step 4: Download and Extract OpenCV Android SDK
       - name: Download and Extract OpenCV Android SDK
         run: |
           wget -O opencv.zip https://github.com/opencv/opencv/releases/download/4.5.5/opencv-4.5.5-android-sdk.zip
@@ -30,15 +34,18 @@ jobs:
           rm opencv.zip
           echo "OpenCV SDK downloaded and placed in $GITHUB_WORKSPACE/OpenCV-android-sdk"
 
+      # Step 5: Set paths in local.properties
       - name: Set OpenCV path in local.properties
         run: |
           echo "sdk.dir=$ANDROID_HOME" > local.properties
           echo "opencv.dir=$GITHUB_WORKSPACE/OpenCV-android-sdk/sdk" >> local.properties
           cat local.properties
 
+      # Step 6: Build Debug APK
       - name: Build Debug APK
-        run: ./gradlew assembleDebug
+        run: ./gradlew assembleDebug --stacktrace
 
+      # Step 7: Upload Debug APK as artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
